--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
                             <div class="height-100 display-table">
                                 <div class="display-table-cell vertical-align-middle">
                                     <div class="display-block position-relative">
-                                        <img src="images/home/ebe-757x550.jpg" alt=""/>
+                                        <img src="images/home/hydrake.jpg" alt=""/>
                                         <p class="bottom-text width-100 text-extra-small text-white text-uppercase text-center">Branding and Identity</p>
                                     </div>
                                     <div class="hover-title-box padding-55px-lr width-300px sm-width-100 sm-padding-20px-lr">
@@ -179,7 +179,7 @@
                             <div class="height-100 display-table">
                                 <div class="display-table-cell vertical-align-middle">
                                     <div class="display-block position-relative">
-                                        <img src="images/home/mojit_ando.jpg" alt=""/>
+                                        <img src="images/home/github.jpg" alt=""/>
                                         <p class="bottom-text width-100 text-extra-small text-white text-uppercase text-center">Branding and Brochure</p>
                                     </div>
                                     <div class="hover-title-box padding-55px-lr width-300px sm-width-100 sm-padding-20px-lr">
@@ -195,7 +195,7 @@
                             <div class="height-100 display-table">
                                 <div class="display-table-cell vertical-align-middle">
                                     <div class="display-block position-relative">
-                                        <img src="images/home/trattoria_alla_grotta.jpg" alt=""/>
+                                        <img src="images/home/mojit_ando.jpg" alt=""/>
                                         <p class="bottom-text width-100 text-extra-small text-white text-uppercase text-center">Web and Photography</p>
                                     </div>
                                     <div class="hover-title-box padding-55px-lr width-300px sm-width-100 sm-padding-20px-lr">
@@ -211,7 +211,7 @@
                             <div class="height-100 display-table">
                                 <div class="display-table-cell vertical-align-middle">
                                     <div class="display-block position-relative">
-                                        <img src="images/home/hydrake.jpg" alt=""/>
+                                        <img src="images/home/play_store.jpg" alt=""/>
                                         <p class="bottom-text width-100 text-extra-small text-white text-uppercase text-center">Branding and Identity</p>
                                     </div>
                                     <div class="hover-title-box padding-55px-lr width-300px sm-width-100 sm-padding-20px-lr">
@@ -227,7 +227,7 @@
                             <div class="height-100 display-table">
                                 <div class="display-table-cell vertical-align-middle">
                                     <div class="display-block position-relative">
-                                        <img src="images/homepage-2-slider-img-4.jpg" alt=""/>
+                                        <img src="images/home/ebe.jpg" alt=""/>
                                         <p class="bottom-text width-100 text-extra-small text-white text-uppercase text-center">Web and Photography</p>
                                     </div>
                                     <div class="hover-title-box padding-55px-lr width-300px sm-width-100 sm-padding-20px-lr">
@@ -243,7 +243,7 @@
                             <div class="height-100 display-table">
                                 <div class="display-table-cell vertical-align-middle">
                                     <div class="display-block position-relative">
-                                        <img src="images/homepage-2-slider-img-11.jpg" alt=""/>
+                                        <img src="images/home/caminetto.jpg" alt=""/>
                                         <p class="bottom-text width-100 text-extra-small text-white text-uppercase text-center">Branding and Identity</p>
                                     </div>
                                     <div class="hover-title-box padding-55px-lr width-300px sm-width-100 sm-padding-20px-lr">
