--- a/index.html
+++ b/index.html
@@ -47,11 +47,9 @@
 		<![endif]-->
 		
 		<!-- START CUSTOM STYLE -->
-		<style type="text/css">
-			A:visited { COLOR: rgb(211, 172, 0); }
-			A:active { COLOR: orange; }
-			A:hover { COLOR: #ffe600; }
-		</style>
+		<!--<style type="text/css">
+
+		</style>-->
 		<!-- END CUSTOM STYLE -->
 		
     </head>
@@ -103,17 +101,17 @@
                                                     <ul class="font-weight-600 xs-no-padding-left">
                                                         <!-- start menu item -->
                                                         <li>
-                                                            <a href="index.html" style="color:white">Home</a><span  data-toggle="modal" class="hamburger-menu"></span>
+                                                            <a href="index.html" class="text-deep-pink-hover" style="color:white">Home</a><span  data-toggle="modal" class="hamburger-menu"></span>
                                                         </li>
                                                         <!-- end menu item -->
                                                         <!-- start menu item -->
                                                         <li>
-                                                            <a href="about-me.html" style="color:white">About Me</a><span  data-toggle="modal" class="hamburger-menu"></span>
+                                                            <a href="about-me.html" class="text-deep-pink-hover" style="color:white">About Me</a><span  data-toggle="modal" class="hamburger-menu"></span>
                                                         </li>
                                                         <!-- end menu item -->
                                                         <!-- start menu item -->
                                                         <li>
-                                                            <a href="portfolio-full-width-masonry-overlay.html" style="color:white">Portfolio</a><span  data-toggle="modal"  class="hamburger-menu"></span>
+                                                            <a href="portfolio-full-width-masonry-overlay.html" class="text-deep-pink-hover" style="color:white">Portfolio</a><span  data-toggle="modal"  class="hamburger-menu"></span>
 														</li> 
 														
 														<!-- TODO: Possible portfolio pages
@@ -124,8 +122,8 @@
 
                                                         <!-- end menu item -->
                                                         <!-- start menu item -->
-                                                        <li class="hamburger-menu">
-                                                            <a href="contact-us-classic.html" style="color:white">Contact Me</a><span  data-toggle="modal"  class="hamburger-menu"></span>
+                                                        <li>
+                                                            <a href="contact-us-classic.html" class="text-deep-pink-hover" style="color:white">Contact Me</a><span  data-toggle="modal"  class="hamburger-menu"></span>
                                                         </li>
                                                         <!-- end menu item -->
                                                     </ul>
@@ -143,7 +141,7 @@
                                                 </div>
                                             </div>
                                         </div>
-                                        <button class="close-button-menu" id="close-button"></button>
+                                        <button style="color: white" class="text-white text-deep-pink-hover close-button-menu" id="close-button"></button>
                                     </div>
                                 </div>
                             </div>
