--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
                                                     <ul class="font-weight-600 xs-no-padding-left">
                                                         <!-- start menu item -->
                                                         <li>
-                                                            <a href="index.html" class="text-deep-pink-hover" style="color:white">Home</a><span  data-toggle="modal" class="hamburger-menu"></span>
+                                                            <a href="index.html#" class="text-deep-pink-hover" style="color:white">Home</a><span  data-toggle="modal" class="hamburger-menu"></span>
                                                         </li>
                                                         <!-- end menu item -->
                                                         <!-- start menu item -->
@@ -111,7 +111,7 @@
                                                         <!-- end menu item -->
                                                         <!-- start menu item -->
                                                         <li>
-                                                            <a href="portfolio-full-width-masonry-overlay.html" class="text-deep-pink-hover" style="color:white">Portfolio</a><span  data-toggle="modal"  class="hamburger-menu"></span>
+                                                            <a href="portfolio.html" class="text-deep-pink-hover" style="color:white">Portfolio</a><span  data-toggle="modal"  class="hamburger-menu"></span>
 														</li> 
 														
 														<!-- TODO: Possible portfolio pages
@@ -141,7 +141,7 @@
                                                 </div>
                                             </div>
                                         </div>
-                                        <button style="color: white" class="text-white text-deep-pink-hover close-button-menu" id="close-button"></button>
+                                        <button style="color: white; background-color: white" class="text-white text-deep-pink-hover close-button-menu" id="close-button"></button>
                                     </div>
                                 </div>
                             </div>
@@ -354,6 +354,7 @@
         <script type="text/javascript" src="revolution/js/extensions/revolution.extension.slideanims.min.js"></script>
         <script type="text/javascript" src="revolution/js/extensions/revolution.extension.video.min.js"></script>-->
         <!-- setting -->
-        <script type="text/javascript" src="js/main.js"></script>
+		<script type="text/javascript" src="js/main.js"></script>
+		<!-- Others -->
     </body>
 </html>
