--- a/portfolio.html
+++ b/portfolio.html
@@ -44,14 +44,7 @@
         <link rel="stylesheet" href="css/responsive.css" />
         <!--[if IE]>
             <script src="js/html5shiv.js"></script>
-		<![endif]-->
-		
-		<!-- START CUSTOM STYLE -->
-		<!--<style type="text/css">
-
-		</style>-->
-		<!-- END CUSTOM STYLE -->
-		
+        <![endif]-->
     </head>
 
     <body class="width-100">
@@ -63,142 +56,80 @@
                 <div class="container-fluid nav-header-container height-100px padding-three-half-lr xs-height-70px xs-padding-15px-lr">
                     <div class="row">
                         <!-- start logo -->
-                        <div class="col-md-2 col-sm-3 col-xs-8 pull-left"><a href="index.html" title="Pofo" class="logo"><img src="images/logo-full-white.png" data-rjs="images/logo-full-white@2x.png" alt="Pofo"></a></div>
+                        <div class="col-md-2 col-sm-3 col-xs-8 pull-left"><a href="index.html" title="ZanK" class="logo"><img src="images/logo-full-white.png" data-rjs="images/logo-full-white@2x.png" alt="ZanK"></a></div>
                         <!-- end logo -->
                         <!-- start main menu -->
-                        <div class="col-md-10 col-sm-9 col-xs-4">
-                            <div class="menu-wrap full-screen no-padding">
-                                <div class="col-sm-6 no-padding hidden-xs"> 
-                                    <div class="cover-background full-screen" style="background-image:url('images/menu-background-1.png')">     
-                                        <div class="opacity-medium bg-extra-dark-gray"></div>
-                                        <div class="position-absolute height-100 width-100 text-center">
-                                            <div class="display-table height-100 width-100">
-                                                <div class="display-table-cell height-100 width-100 vertical-align-middle position-relative">
-                                                    <a href="index.html"><img alt="" src="images/logo-white-big.png" data-rjs="images/logo-white-big@2x.png"></a>
-                                                    <div class="position-absolute bottom-50 text-center width-100 margin-30px-bottom">
-                                                        <div class="text-small text-extra-medium-gray">&COPY; 2017 POFO is Proudly Powered by <a href="../../index.html" title="ThemeZaa" class="text-extra-medium-gray text-deep-pink-hover" target="_blank">ThemeZaa</a></div>
-                                                    </div>
-                                                </div>
-                                            </div>                                                            
-                                        </div>                                                    
-                                    </div>
-                                </div>
-                                <div class="col-sm-6 no-padding bg-white full-screen">
-                                    <div class="position-absolute height-100 width-100 overflow-auto">
-                                        <div class="display-table height-100 width-100">
-                                            <div class="display-table-cell height-100 width-100 vertical-align-middle padding-fourteen-lr alt-font link-style-2 sm-padding-seven-lr xs-padding-15px-lr">
-                                                <!-- start menu -->
-                                                <ul class="font-weight-600 xs-no-padding-left">
-                                                    <!-- start menu item -->
-                                                    <li class="dropdown">
-                                                        <a href="index.html">Home</a><span data-toggle="dropdown" class="dropdown-toggle"></span>
-                                                        <ul class="dropdown-menu font-weight-300">
-                                                            <li><a href="home-classic-corporate.html">Classic corporate</a></li>
-                                                            <li><a href="home-creative-studio.html">Creative studio</a></li>
-                                                            <li><a href="home-portfolio-minimal.html">Portfolio minimal</a></li>
-                                                            <li><a href="home-blog-personal.html">Blog personal</a></li>
-                                                        </ul>
-                                                    </li>
-                                                    <!-- end menu item -->
-                                                    <!-- start menu item -->
-                                                    <li class="dropdown">
-                                                        <a href="about-us-simple.html">Pages</a><span data-toggle="dropdown" class="dropdown-toggle"></span>
-                                                        <ul class="dropdown-menu font-weight-300">
-                                                            <li><a href="about-us-simple.html">About</a></li>
-                                                            <li><a href="services-simple.html">Services</a></li>
-                                                            <li><a href="contact-us-simple.html">Contact us</a></li>
-                                                            <li><a href="team-simple.html">Team</a></li>
-                                                            <li><a href="404.html">Additional pages</a></li>
-                                                        </ul>
-                                                    </li>
-                                                    <!-- end menu item -->
-                                                    <!-- start menu item -->
-                                                    <li class="dropdown">
-                                                        <a href="portfolio-full-width-masonry-overlay.html">Portfolio</a><span data-toggle="dropdown" class="dropdown-toggle"></span>
-                                                        <ul class="dropdown-menu font-weight-300">
-                                                            <li><a href="portfolio-full-width-masonry-overlay.html">Portfolio masonry</a></li>
-                                                            <li><a href="portfolio-full-width-metro-overlay.html">Portfolio metro</a></li>
-                                                            <li><a href="portfolio-full-width-image-gallery.html">Portfolio image gallery</a></li>
-                                                            <li><a href="portfolio-boxed-grid-overlay.html">Portfolio grid</a></li>
-                                                            <li><a href="single-project-page-01.html">Single project page</a></li>
-                                                            <li><a href="portfolio-two-columns.html">Portfolio columns</a></li>
-                                                        </ul>
-                                                    </li>
-                                                    <!-- end menu item -->
-                                                    <!-- start menu item -->
-                                                    <li class="dropdown">
-                                                        <a href="blog-standard-full-width.html">Blog</a><span data-toggle="dropdown" class="dropdown-toggle"></span>
-                                                        <ul class="dropdown-menu font-weight-300">
-                                                            <li><a href="blog-standard-full-width.html">Blog standard – full width</a></li>
-                                                            <li><a href="blog-classic.html">Blog classic</a></li>
-                                                            <li><a href="blog-list.html">Blog list</a></li>
-                                                            <li><a href="blog-grid.html">Blog grid</a></li>
-                                                            <li><a href="blog-masonry.html">Blog masonry</a></li>
-                                                            <li><a href="blog-simple.html">Blog simple</a></li>
-                                                            <li><a href="blog-clean.html">Blog clean</a></li>
-                                                            <li><a href="blog-images.html">Blog images</a></li>
-                                                            <li><a href="blog-only-text.html">Blog only text</a></li>
-                                                            <li><a href="blog-post-layout-01.html">Blog post layout 01</a></li>
-                                                            <li><a href="blog-standard-post.html">Standard post</a></li>
-                                                            <li><a href="blog-gallery-post.html">Gallery post</a></li>
-                                                            <li><a href="blog-slider-post.html">Slider post</a></li>
-                                                            <li><a href="blog-html5-video-post.html">HTML5 video post</a></li>
-                                                            <li><a href="blog-youtube-video-post.html">Youtube video post</a></li>
-                                                            <li><a href="blog-vimeo-video-post.html">Vimeo video post</a></li>
-                                                            <li><a href="blog-audio-post.html">Audio post</a></li>
-                                                            <li><a href="blog-blockquote-post.html">Blockquote post</a></li>
-                                                            <li><a href="blog-full-width-post.html">Full width post</a></li>
-                                                        </ul>
-                                                    </li>
-                                                    <!-- end menu item -->
-                                                    <!-- start menu item -->
-                                                    <li class="dropdown">
-                                                        <a href="javascript:void(0);">Elements</a><span data-toggle="dropdown" class="dropdown-toggle"></span>
-                                                        <ul class="dropdown-menu font-weight-300">
-                                                            <li><a href="accordions.html">General elements</a></li>
-                                                            <li><a href="process-bar.html">Infographics / icons</a></li>
-                                                            <li><a href="testimonials.html">Interactive elements</a></li>
-                                                            <li><a href="heading.html">Text & containers</a></li>
-                                                        </ul>
-                                                    </li>
-                                                    <!-- end menu item -->
-                                                    <!-- start menu item -->
-                                                    <li class="dropdown">
-                                                        <a href="javascript:void(0);">Features</a><span data-toggle="dropdown" class="dropdown-toggle"></span>
-                                                        <ul class="dropdown-menu font-weight-300">
-                                                            <li><a href="transparent-header.html">Header styles</a></li>
-                                                            <li><a href="footer-standard.html">Footer</a></li>
-                                                            <li><a href="page-title-left-alignment.html">Page title</a></li>
-                                                            <li><a href="single-image-lightbox.html">Gallery</a></li>
-                                                        </ul>
-                                                    </li>
-                                                    <!-- end menu item -->
-                                                </ul>
-                                                <!-- end menu -->
-                                                <!-- start social links -->
-                                                <div class="margin-fifteen-top padding-35px-left xs-no-padding-left">
-                                                    <div class="icon-social-medium margin-three-bottom">
-                                                        <a href="https://www.facebook.com/" target="_blank" class="text-extra-dark-gray text-deep-pink-hover margin-one-lr"><i class="fab fa-facebook-f" aria-hidden="true"></i></a>
-                                                        <a href="https://twitter.com/" target="_blank" class="text-extra-dark-gray text-deep-pink-hover margin-one-lr"><i class="fab fa-twitter" aria-hidden="true"></i></a>
-                                                        <a href="https://dribbble.com/" target="_blank" class="text-extra-dark-gray text-deep-pink-hover margin-one-lr"><i class="fab fa-dribbble" aria-hidden="true"></i></a>
-                                                        <a href="https://plus.google.com" target="_blank" class="text-extra-dark-gray text-deep-pink-hover margin-one-lr"><i class="fab fa-google-plus-g" aria-hidden="true"></i></a>
-                                                        <a href="https://www.tumblr.com/" target="_blank" class="text-extra-dark-gray text-deep-pink-hover margin-one-lr"><i class="fab fa-tumblr" aria-hidden="true"></i></a>
-                                                    </div>
-                                                </div>
-                                                <!-- start social links -->
-                                            </div>
-                                        </div>
-                                    </div>
-                                    <button class="close-button-menu" id="close-button"></button>
-                                </div>
-                            </div>
-                            <!-- end main menu -->
-                            <button class="navbar-toggle mobile-toggle" type="button" id="open-button" data-toggle="collapse" data-target=".navbar-collapse">
-                                <span></span>
-                                <span></span>
-                                <span></span>
-                            </button>
-                        </div>
+                        <div class="col-md-4 col-sm-4 col-xs-6 text-right">
+							<button class="navbar-toggle mobile-toggle top-0" type="button" id="open-button" data-toggle="collapse" data-target=".navbar-collapse">
+								<span></span>
+								<span></span>
+								<span></span>
+							</button>
+							<div class="menu-wrap full-screen no-padding">
+								<div class="col-sm-6 no-padding hidden-xs"> 
+									<div class="cover-background full-screen">     
+										<div class="opacity-light bg-extra-dark-gray"></div>
+										<div class="position-absolute height-100 width-100 text-center">
+											<div class="display-table height-100 width-100">
+												<div class="display-table-cell height-100 width-100 vertical-align-middle position-relative">
+
+												</div>
+											</div>                                                            
+										</div>                                                    
+									</div>
+								</div>
+								<div class="col-sm-6 no-padding bg-black full-screen text-left">
+									<div class="position-absolute height-100 width-100 overflow-auto">
+										<div class="display-table height-100 width-100">
+											<div class="display-table-cell height-100 width-100 vertical-align-middle padding-fourteen-lr alt-font link-style-2 sm-padding-seven-lr xs-padding-15px-lr">
+												<!-- start menu -->
+												<ul class="font-weight-600 xs-no-padding-left">
+													<!-- start menu item -->
+													<li>
+														<a href="index.html" class="text-deep-pink-hover" style="color:white">Home</a><span  data-toggle="modal" class="hamburger-menu"></span>
+													</li>
+													<!-- end menu item -->
+													<!-- start menu item -->
+													<li>
+														<a href="about-me.html" class="text-deep-pink-hover" style="color:white">About Me</a><span  data-toggle="modal" class="hamburger-menu"></span>
+													</li>
+													<!-- end menu item -->
+													<!-- start menu item -->
+													<li>
+														<a href="portfolio.html#" class="text-deep-pink-hover" style="color:white">Portfolio</a><span  data-toggle="modal"  class="hamburger-menu"></span>
+													</li> 
+													
+													<!-- TODO: Possible portfolio pages
+													portfolio-full-width-masonry-overlay.html
+													portfolio-full-width-carousel.html
+													portfolio-full-width-parallax.html
+													-->
+
+													<!-- end menu item -->
+													<!-- start menu item -->
+													<li>
+														<a href="contact-us-classic.html" class="text-deep-pink-hover" style="color:white">Contact Me</a><span  data-toggle="modal"  class="hamburger-menu"></span>
+													</li>
+													<!-- end menu item -->
+												</ul>
+												<!-- end menu -->
+												<!-- start social links -->
+												<div class="margin-fifteen-top padding-35px-left xs-no-padding-left">
+													<div class="icon-social-medium margin-three-bottom">
+														<a href="https://www.linkedin.com/in/giulio-zanchetta" target="_blank" class="text-white text-deep-pink-hover margin-one-lr"><i class="fab fa-linkedin" aria-hidden="true"></i></a>
+														<a href="https://github.com/zk-g" target="_blank" class="text-white text-deep-pink-hover margin-one-lr"><i class="fab fa-github" aria-hidden="true"></i></a>
+														<a href="mailto:zank@outlook.it" target="_blank" class="text-white text-deep-pink-hover margin-one-lr"><i class="fa fa-envelope" aria-hidden="true"></i></a>
+														<a href="https://api.whatsapp.com/send?phone=+393273570303&text=Salve, &nbsp" target="_blank" class="text-white text-deep-pink-hover margin-one-lr"><i class="fab fa-whatsapp" aria-hidden="true"></i></a>
+													</div>
+												</div>
+												<!-- end social links -->
+											</div>
+										</div>
+									</div>
+									<button style="color: white; background-color: white" class="text-white text-deep-pink-hover close-button-menu" id="close-button"></button>
+								</div>
+							</div>
+						</div>
                     </div>
                     <!-- end navigation panel -->
                 </div>
