--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
                                 <div class="display-table-cell vertical-align-middle">
                                     <h4 class="text-medium-gray display-block margin-5px-bottom alt-font">Hello,</h4>
                                     <h6 class="text-medium-gray font-weight-300 margin-20px-bottom alt-font">I'm Giulio Zanchetta</h6>
-                                    <p class="text-large dispaly-block pull-left font-weight-300 width-90 margin-35px-bottom">I design thoughtful digital experiences & beautiful brand aesthetics. I provide high quality web design services.</p>
+                                    <p class="text-large dispaly-block pull-left font-weight-300 width-90 margin-35px-bottom">A developer who love graphics</br> In the Homepage there are my latest projects</p>
                                     <img src="images/signature.png" class="width-60 signature" alt=""/>
                                 </div>
                             </div>
@@ -178,7 +178,7 @@
                                     </div>
                                     <div class="hover-title-box padding-55px-lr width-300px sm-width-100 sm-padding-20px-lr">
                                         <div class="separator width-50px bg-black md-display-none xs-margin-lr-auto"></div>
-                                        <h3><a class="text-white font-weight-600 alt-font text-white-hover" href="single-project-page-01.html">Pixflow Studio</a></h3>
+                                        <h3><a class="text-white font-weight-600 alt-font text-white-hover" href="single-project-page-01.html">Hydrake Multigaming</a></h3>
                                     </div>
                                 </div>
                             </div>
@@ -194,7 +194,7 @@
                                     </div>
                                     <div class="hover-title-box padding-55px-lr width-300px sm-width-100 sm-padding-20px-lr">
                                         <div class="separator width-50px bg-black md-display-none xs-margin-lr-auto"></div>
-                                        <h3><a class="text-white font-weight-600 alt-font text-white-hover" href="single-project-page-02.html">Tailoring Interior</a></h3>
+                                        <h3><a class="text-white font-weight-600 alt-font text-white-hover" href="single-project-page-02.html">Github Projects</a></h3>
                                     </div>
                                 </div>
                             </div>
@@ -210,7 +210,7 @@
                                     </div>
                                     <div class="hover-title-box padding-55px-lr width-300px sm-width-100 sm-padding-20px-lr">
                                         <div class="separator width-50px bg-black md-display-none xs-margin-lr-auto"></div>
-                                        <h3><a class="text-white font-weight-600 alt-font text-white-hover" href="single-project-page-03.html">Digital Media</a></h3>
+                                        <h3><a class="text-white font-weight-600 alt-font text-white-hover" href="single-project-page-03.html">Mojit.. Ando</a></h3>
                                     </div>
                                 </div>
                             </div>
@@ -226,7 +226,7 @@
                                     </div>
                                     <div class="hover-title-box padding-55px-lr width-300px sm-width-100 sm-padding-20px-lr">
                                         <div class="separator width-50px bg-black md-display-none xs-margin-lr-auto"></div>
-                                        <h3><a class="text-white font-weight-600 alt-font text-white-hover" href="single-project-page-04.html">HardDot Stone</a></h3>
+                                        <h3><a class="text-white font-weight-600 alt-font text-white-hover" href="single-project-page-04.html">Play Store</a></h3>
                                     </div>
                                 </div>
                             </div>
@@ -242,7 +242,7 @@
                                     </div>
                                     <div class="hover-title-box padding-55px-lr width-300px sm-width-100 sm-padding-20px-lr">
                                         <div class="separator width-50px bg-black md-display-none xs-margin-lr-auto"></div>
-                                        <h3><a class="text-white font-weight-600 alt-font text-white-hover" href="single-project-page-04.html">HardDot Stone</a></h3>
+                                        <h3><a class="text-white font-weight-600 alt-font text-white-hover" href="single-project-page-04.html">Unity</a></h3>
                                     </div>
                                 </div>
                             </div>
@@ -258,7 +258,7 @@
                                     </div>
                                     <div class="hover-title-box padding-55px-lr width-300px sm-width-100 sm-padding-20px-lr">
                                         <div class="separator width-50px bg-black md-display-none xs-margin-lr-auto"></div>
-                                        <h3><a class="text-white font-weight-600 alt-font text-white-hover" href="single-project-page-05.html">Violator Series</a></h3>
+                                        <h3><a class="text-white font-weight-600 alt-font text-white-hover" href="single-project-page-05.html">EBE Immagine</a></h3>
                                     </div>
                                 </div>
                             </div>
@@ -274,7 +274,7 @@
                                     </div>
                                     <div class="hover-title-box padding-55px-lr width-300px sm-width-100 sm-padding-20px-lr">
                                         <div class="separator width-50px bg-black md-display-none xs-margin-lr-auto"></div>
-                                        <h3><a class="text-white font-weight-600 alt-font text-white-hover" href="single-project-page-01.html">Banana Design</a></h3>
+                                        <h3><a class="text-white font-weight-600 alt-font text-white-hover" href="single-project-page-01.html">Zanchetta Caminetti</a></h3>
                                     </div>
                                 </div>
                             </div>
@@ -340,7 +340,7 @@
         <script type="text/javascript" src="js/instafeed.min.js"></script>
         <!-- retina -->
         <script type="text/javascript" src="js/retina.min.js"></script>
-        <!-- revolution -->
+		<!-- revolution -->		
         <script type="text/javascript" src="revolution/js/jquery.themepunch.tools.min.js"></script>
         <script type="text/javascript" src="revolution/js/jquery.themepunch.revolution.min.js"></script>
         <!-- revolution slider extensions (load below extensions JS files only on local file systems to make the slider work! The following part can be removed on server for on demand loading) -->
