--- a/overlay.html
+++ b/overlay.html
@@ -2,6 +2,9 @@
   <head>
 	<title>Fullscreen Overlay Animation</title>
 	<link rel="stylesheet" href="css/overlay.css" />
+	<link href='https://fonts.googleapis.com/css?family=Roboto' rel='stylesheet' type='text/css'>
+	<script src="https://code.jquery.com/jquery-latest.min.js" type="text/javascript"></script>
+
   </head>
   <body>
     <div id="container">
