--- a/index.html
+++ b/index.html
@@ -64,9 +64,9 @@
                         <div class="row">
                             <div class="col-md-4 col-sm-4 col-xs-6 hidden-xs text-left">
                                 <div class="header-social-icon border-none no-padding-left no-margin-left">
-                                    <a href="https://www.linkedin.com/in/giulio-zanchetta" title="Linkedin" target="_blank"><i class="fab fa-linkedin"></i></a>
-                                    <a href="https://github.com/zk-g" title="Github" target="_blank"><i class="fab fa-github"></i></a>
-                                    <a href="mailto:zank@outlook.it" title="Mail" target="_blank"><i class="fa fa-envelope"></i></a>                          
+                                    <a href="https://www.linkedin.com/in/giulio-zanchetta" class="text-deep-pink-hover" title="Linkedin" target="_blank"><i class="fab fa-linkedin"></i></a>
+                                    <a href="https://github.com/zk-g" class="text-deep-pink-hover" title="Github" target="_blank"><i class="fab fa-github"></i></a>
+                                    <a href="mailto:zank@outlook.it" class="text-deep-pink-hover" title="Mail" target="_blank"><i class="fa fa-envelope"></i></a>                          
                                 </div>
                             </div>
                             <!-- start logo -->
